# rust_microservices_example

./: .gitignore  Cargo.toml
common-utils/: Cargo.toml
common-utils/src/: lib.rs
planets-service/: Cargo.toml
planets-service/src/: handlers.rs  main.rs
planets-service/src/graphql/: mod.rs  post_ql.rs
planets-service/src/repository/: mod.rs  post_coll.rs
planets-service/src/schemas/: post_schema.rs
