[package]
name = "planets-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = { version = "6.0.4", features = ["bson", "chrono"] }
async-graphql-actix-web = "6.0.4"
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
futures = "0.3.28"
async-trait = "0.1.73"
bigdecimal = {  version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
strum = "0.25.0"
strum_macros = "0.25.2"
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
async-stream = "0.3.5"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.19"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"


[dependencies.mongodb]
version = "2.6.1"
default-features = false
features = ["async-std-runtime",  "sync", "bson-uuid-1", "bson-uuid-0_8", "bson-serde_with" ]#,"async-std-runtime"] 
